# MeegerenGen

./: CMakeLists.txt  README.md
src/: ideas.adi  main.cpp
src/ga/: cleaner_saga.cpp  cleaner_saga.h  drawable_genetic_algorithm.h  genetic_algorithm.h  mbga.h  self_adjustable_ga.h
src/ga/evaluator/: evaluator.h  mipmap_evaluator.h
src/ga/mutation/: composite_mutation.h  mutation.h  obligatory_composite_mutation.h  self_adjustable_mutation.h
src/ga/selection/: random_selection.h  roulette_selection.h  selection.h  tournament_selection.h
src/ga/solution/: solution.h
src/ga/solution/cps/: cps.cpp  cps.h
src/ga/solution/cps/mutations/: add_polygon_mutation.cpp  add_polygon_mutation.h  add_vertex_mutation.cpp  add_vertex_mutation.h  background_color_mutation.cpp  background_color_mutation.h  color_mutation.cpp  color_mutation.h  curving_vertex_mutation.cpp  curving_vertex_mutation.h  point_mutation.cpp  point_mutation.h  remove_polygon_mutation.cpp  remove_polygon_mutation.h  remove_vertex_mutation.cpp  remove_vertex_mutation.h  swap_mutation.cpp  swap_mutation.h
src/ga/util/: ga_bool_ref_condition.h  ga_time_condition.h
src/graphics/: context.cpp  context.h  shader.cpp  shader.h  texture.cpp
src/graphics/drawer/: drawer.h  opengl_drawer.cpp  opengl_drawer.h  svg_drawer.cpp  svg_drawer.h
src/graphics/shaders/: draw_texture.sha  shader.sha  subtract_shader.sha  texture.sha  triangle_shader.sha  triangle_shader2D.sha
src/programs/: cleaner_saga_program.cpp  cleaner_saga_program.h  creator_programs.cpp  creator_programs.h  image_ga.cpp  image_ga.h  self_adjustuble_ga_program.cpp  self_adjustuble_ga_program.h
src/util/: data_loader.cpp  data_loader.h  drawer_thread.h  multi_drawer_thread.h  random.h  thread.h  timer.h  types.h
